# helpdesk-ai-gateway

./: .gitignore  README.md
Employee-Service/: docker-compose.yml  requirements.txt
Employee-Service/app/: crud.py  database.py  models.py  schemas.py
FormFullStack/: Dockerfile  build.gradle.kts  docker-compose.yml  settings.gradle.kts
backend/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend-llm/: docker-compose.yml
backend-main/: Dockerfile  main.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/models/: category.py  chat_history.py  employee.py  example.py  priority.py  ticket.py
backend/app/routers/: employee.py  example.py
backend/app/schemas/: employee.py  example.py
backend/app/services/: employee_service.py  example_service.py
backend/app/utils/: database.py
backend_llm/: main.py
design/logo/: logo-grid-4x4.rar
docs/: DRAFT.md  Положение_hackathon_2.docx  ТЗ ИИ IT HelpDesk.docx
helpdesk-ai-api-collection/: bruno.json
helpdesk-ai-api-collection/Backend/: Check API.bru  Health Check (DB Connection).bru  folder.bru
helpdesk-ai-api-collection/Backend/Chat_Memory/: folder.bru
helpdesk-ai-api-collection/Backend/Employee/: Assign Free Employee.bru  Change Status- FREE Of Employee.bru  Get Free Employee To Help.bru  Release Employee.bru  folder.bru
helpdesk-ai-api-collection/Backend/Tickets/: folder.bru
helpdesk-ai-api-collection/Web-Form/: Web Form - front.bru  folder.bru
helpdesk-ai-api-collection/environments/: Localhost.bru  Prod.bru
n8n/: N8N.json
(+18 files in other folders)
